fix focus photo scaling on mobile and make buttons bigger

--- a/src/Moment.css
+++ b/src/Moment.css
@@ -42,6 +42,7 @@ main.focused {
     grid-row: 1;
     display: flex;
     place-items: center;
+    font-size: 1.2em;
 }
 
 #focused-buttons .button {
@@ -61,6 +62,8 @@ main.focused {
     max-height: 100%;
     max-width: 100%;
     height: 100%;
+    width: 100%;
+    object-fit: contain;
 }
 
 #focused-element .note {
